@@ -7,7 +7,7 @@ ACLOCAL_AMFLAGS = -I ../../../../../../aclocal
 
 # wrapup is the one that actually builds and installs the library
 #  from the individual .rel files built in other directories
-SUBDIRS = include startup start canbus console network wrapup
+SUBDIRS = clock include startup start canbus console irq network vectors wrapup
 
 include $(top_srcdir)/../../bsp.am
 
