@@ -28,10 +28,13 @@ RTEMS_PROJECT_ROOT
 # Explicitly list all Makefiles here
 AC_OUTPUT( 
 Makefile
+clock/Makefile
 canbus/Makefile
 console/Makefile
 include/Makefile
+irq/Makefile
 network/Makefile
 start/Makefile
 startup/Makefile
+vectors/Makefile
 wrapup/Makefile)
