@@ -9,7 +9,7 @@ VPATH = @srcdir@:@srcdir@/../../../shared
 PGM = $(ARCH)/startup.rel
 
 C_FILES = bspclean.c bsplibc.c bsppost.c bspstart.c bootcard.c cpuinit.c \
-    main.c mmutlbtab.c sbrk.c setvec.c gnatinstallhandler.c
+    main.c mmutlbtab.c sbrk.c gnatinstallhandler.c
 C_O_FILES = $(C_FILES:%.c=$(ARCH)/%.o)
 
 OBJS = $(C_O_FILES)
@@ -35,6 +35,6 @@ all-local: $(ARCH) $(OBJS) $(PGM) $(TMPINSTALL_FILES)
 
 .PRECIOUS: $(PGM)
 
-EXTRA_DIST = bspstart.c linkcmds setvec.c
+EXTRA_DIST = bspstart.c linkcmds
 
 include $(top_srcdir)/../../../../../../automake/local.am
