@@ -125,7 +125,15 @@ SECTIONS
 	bss.size = bss.end - bss.start;
 	text.size = text.end - text.start;
 	PROVIDE(_end = bss.end);
-	
+	/*
+	 * Interrupt stack setup
+	 */
+
+	IntrStack_start = ALIGN(0x10);
+	. += 0x4000;
+	intrStack = .;
+	PROVIDE(intrStackPtr = intrStack);
+ 	
         dpram : 
 	{
           m8xx = .;
